--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <p><span>Email Id </span> -> siddharthsaachi@gmail.com</p>
         <div class="button">
           <div class="button1">
-            <a href="/pokemon/pokemon.html"
+            <a href="./pokemon/pokemon.html"
               ><button onclick="notify('Pokemon')">Pokemon Page</button></a
             >
           </div>
           <div class="button2">
-            <a href="/portfolio/portfolio.html"
+            <a href="./portfolio/portfolio.html"
               ><button onclick="notify('Portfolio')">Portfolio Page</button></a
             >
           </div>
