--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p><span>Email Id </span> -> siddharthsaachi@gmail.com</p>
         <div class="button">
           <div class="button1">
-            <a href="./pokemon/pokemon.html"
+            <a href="./pokemon/index.html"
               ><button onclick="notify('Pokemon')">Pokemon Page</button></a
             >
           </div>
