--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             >
           </div>
           <div class="button2">
-            <a href="./portfolio/portfolio.html"
+            <a href="./portfolio/index.html"
               ><button onclick="notify('Portfolio')">Portfolio Page</button></a
             >
           </div>
