Cricket App Added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
               ><button onclick="notify('Portfolio')">Portfolio Page</button></a
             >
           </div>
+          <div class="button3">
+            <a href="./cricketApp/index.html"
+              ><button onclick="notify('Cricket App')">Cricket App</button></a
+            >
+          </div>
         </div>
       </div>
     </center>
