--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
               ><button onclick="notify('To Do App')">To Do App</button></a
             >
           </div>
+          <div class="button5">
+            <a href="./Form Validation/index.html"
+              ><button onclick="notify('Form Validation')">
+                Form Validation
+              </button></a
+            >
+          </div>
+          <div class="button6">
+            <a href="./Copy To Clickboard/index.html"
+              ><button onclick="notify('Copy Text')">Copy Text</button></a
+            >
+          </div>
         </div>
       </div>
     </center>
