Pop Up Page Added

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
               ><button onclick="notify('Copy Text')">Copy Text</button></a
             >
           </div>
+          <div class="button6">
+            <a href="./Pop-Up/index.html"
+              ><button onclick="notify('Pop Up Page')">Pop Up Page</button></a
+            >
+          </div>
         </div>
       </div>
     </center>
