--- a/Pop-Up/index.html
+++ b/Pop-Up/index.html
@@ -5,38 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="text-center mt-5">
-      <button class="clicks">Click Me</button>
+    <div class="text-center my-5">
+      <button class="clicks btn btn-lg btn-outline-dark" id="toggleBtn">
+        Click Me
+      </button>
     </div>
-    <div class="continer text-center" id="box">
+    <div class="continer m-auto p-4" id="box">
       <div class="one">
-        <h3>Enter Details</h3>
-        <form action="#">
+        <!-- <button id="close-btn" class="close">
+          <i class="fa-solid fa-xmark"></i> -->
+        <i class="fa fa-close fa-xl pt-sm-1" id="cross"></i>
+        <!-- </button> -->
+        <h3 class="text-center display-4">Enter Details</h3>
+        <form action="">
           <div class="form-group">
-            <label for="Username">Username</label>
-            <input type="text" name="" class="form-control" id="" />
+            <label for="user" class="lead">Username</label>
+            <input
+              type="text"
+              name=""
+              id="username"
+              class="form-control"
+              autocomplete="off"
+              placeholder="Enter Username"
+            />
+            <h5 id="usernamevalidation"></h5>
           </div>
           <div class="form-group">
-            <label for="Email">Email</label>
-            <input type="email" name="" class="form-control" id="" />
+            <label for="password" class="lead">Password</label>
+            <input
+              type="text"
+              name=""
+              id="password"
+              class="form-control"
+              autocomplete="off"
+              placeholder="Enter Password"
+            />
+            <h5 id="passwordvalidation"></h5>
           </div>
-          <input type="button" value="submit" class="btn btn-primary" />
+          <div class="form-group">
+            <label for="compassword" class="lead">Confirm Password</label>
+            <input
+              type="password"
+              name=""
+              id="confirmpassword"
+              class="form-control"
+              autocomplete="off"
+            />
+            <h5 id="confirmpasswordvalidation"></h5>
+          </div>
+          <input
+            type="submit"
+            id="submitvalidation"
+            value="submit"
+            class="btn btn-block btn-outline-dark mt-2"
+          />
         </form>
       </div>
     </div>
+    <script
+      src="https://kit.fontawesome.com/f88edcb3fe.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
   </body>
 </html>
 
