--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
               ><button onclick="notify('Pop Up Page')">Pop Up Page</button></a
             >
           </div>
+          <div class="button7">
+            <a href="./Calculator/index.html"
+              ><button onclick="notify('Calculator')">Calculator</button></a
+            >
+          </div>
         </div>
       </div>
     </center>
