--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
               ><button onclick="notify('Calculator')">Calculator</button></a
             >
           </div>
+          <div class="button8">
+            <a href="./image slider/index.html"
+              ><button onclick="notify('Image Slider')">Image Slider</button></a
+            >
+          </div>
         </div>
       </div>
     </center>
