SMTP assignment added

--- a/index.html
+++ b/index.html
@@ -34,13 +34,6 @@
               ><button onclick="notify('To Do App')">To Do App</button></a
             >
           </div>
-          <div class="button5">
-            <a href="./Form Validation/index.html"
-              ><button onclick="notify('Form Validation')">
-                Form Validation
-              </button></a
-            >
-          </div>
           <div class="button6">
             <a href="./Copy To Clickboard/index.html"
               ><button onclick="notify('Copy Text')">Copy Text</button></a
@@ -59,6 +52,13 @@
           <div class="button8">
             <a href="./image slider/index.html"
               ><button onclick="notify('Image Slider')">Image Slider</button></a
+            >
+          </div>
+          <div class="button9">
+            <a href="./class-assignment2/index.html"
+              ><button onclick="notify('Theme Changer')">
+                Theme Changer
+              </button></a
             >
           </div>
         </div>
